                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2017-07-20
 * Moved login() from Wing::Web::Account, to Wing::Dancer and made it a Dancer Plugin so it can be called from multiple modules.

2017-07-18
 * Added instructions for compiling OpenSSL and Perl modules on Mac OS, because Apple's outdated OpenSSL doesn't work anymore with sites like Stripe.

2017-06-29
 Added skip_confirm to wing.angular.js objectManager delete().

2017-06-29
 * Added get_object() in wing.angular.js to suppliment find_object().
 * Added params option to search() and all() in objectListManager in wing.angular.js.

2017-06-25
 * Allow null as a value on a Rest qualifier.
 * Fixed a bug in wing.merge()
 * Added with_credentials flag to wing.angular.js objectListManager and objectManager $http methods.

2017-06-23
 * create() in wing.angular.js objectListManager now provides a reference to the object during on_success

2017-06-22
 * wing.angular.js now supports angular 1.6, by removing the use of .success and .error methods on $http in favor of .then

2017-06-09
 * WebFilteredField no longer puts a restriction on the length of a string.
 * S3Image increased filename size from 60 to 255. 

2017-05-18
 * Added max_items option to result sets so that you can artificially stop pagination after some arbitrary amount, rather than all the records in the database.

2017-03-04
 * Readding the prevention of joined queries on generated relationships.

2017-03-03
 * Removed a wierd query option on objectListManager search() in wing.angular.js.

2017-01-25
 * Don't prevent joined queries from performing a query on generated relationships.

2017-01-11
 * Do session check if session_id is passed to /api/_test

2017-01-02